Wed Oct 16 10:16:57 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Remove tests 4, 4.5, and 4.75; this functionality is
	already tested by 45, 45.5 and other tests.
	(ignore): New tests ignore-192, ignore-193, ignore-194, and
	ignore-195 test output from "cvs release".
	(modules2): New tests modules2-6, modules2-7, and modules2-8 test
	ability of cvs release to handle multiple arguments.  Since it
	currently doesn't, the tests are kludged.

	* server.c, cvs.h (cvs_flushout): New function.
	* recurse.c (do_file_proc): Call it.
	* server.c (cvs_outerr): Call fflush (stdout) in non-server case.
	* main.c (main): Don't call setvbuf.  The code was incorrectly
	checking for "patch" (it really is "rdiff"); the concern about
	slowing down large amounts of output is not specific to rdiff
	(it applies to "log" for example); and the above changes should
	meet the need.

Tue Oct 15 10:22:10 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	This is intended to facilitate some future cleanups to the
	locking, but by itself it is a simple, conversative rearrangement:
	* tag.c (locked_dir, locked_list): Move from here...
	* lock.c: ...to here.
	* lock.c (Lock_Cleanup): If locked_dir is set clean it up too.
	* tag.c (tag_unlockdir): Removed; with the above change
	Lock_Cleanup suffices.
	* tag.c (tag_lockdir): Move from here...
	* lock.c (lock_dir_for_write): ...to here.
	* tag.c (tag_fileproc), rtag.c (rtag_fileproc): Update callers.
	Move comments concerning why we are locking what we are from
	tag_lockdir to here.
	* tag.c (tag_filesdoneproc), rtag.c (rtag_filesdoneproc):
	Update callers.
	* lock.c (Writer_Lock): Made static.
	* cvs.h: Update declarations.
	* server.c (server_notify): Call lock_dir_for_write rather than
	calling Writer_Lock ourselves.

	This is intended to facilitate some future cleanups to the
	locking, but by itself it is a simple, conversative rearrangement:
	* lock.c (Lock_Cleanup): Also dellist (lock_tree_list).